# rust_number

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
tests/: precision.rs
